  * Added a new lsl.writer.fitsidi.ExtendedIDI class to deal with more than 255 antennas
  * Updated lsl.imaging.utils to deal with the new ExtendedIDI class
  * Added in the self-calibration routines to lsl.imaging.selfCal
  * Updated the LWA1 and LWA2 SSMIFs
  * Fixed the observatory/instrument specific header values in lsl.writer.fitsidi so that they relflect the different sites

0.5.4
  * Switched over to transparent compression in the lsl.common.metabundle functions
  * Added support for '/' seperated YYYY/MM/DD in lsl.common.sdf.parseTimeString()
  * Removed the 'return' values from the _gofast module import call
  * Various cleanups in the C extentions to remove compile time warnings
  * Tweaked the splitDRX.py script to be more robust
  * Added support for libnova version 0.15.0
  * Improved support for STEPPED observations in lsl.common.sdf
  * Made the TBW read-out duration calculation consistent with the current version of MCS
  * Changed the allowed TBN tuning from 10 to 88 MHz to 5 to 93 MHz
  * Tweaked lsl.common.beamformer.phaseAndSum() to automatically exclude bad stands
  * Removed a testing block from lsl.common.beamformer.intDelayAndSum() which only sums the first 20 antennas

0.5.3
  * Changed the DROS spectrometer reader to match the new format
  * Fixed the documentation for the various correlator.fx spectra functions
  * Updated the sphinx documentation to address Ticket #25
  * Added the session splitting script to IOC to address Ticket #24
  * Changed lsl.common.mcs.mjdmpm2datetime() to return naive datetime instances (Ticket #26)
  * Fixed a bug in lsl.common.sdf.Project that causes some observation non-overlaps to be reported as overlaps
  * Fixed a bug in the setup.py script that caused it to crash on systems without pkg-config installed
  * Modified splitDRX.py to cope with DRX data that begins with frames that list a decimation of zero
  * Added support for parsing the OBS_DRX_GAIN and OBS_TBN_GAIN keywords in the SDF parser