@@ -11,6 +11,7 @@
   * Added in the self-calibration routines to lsl.imaging.selfCal
   * Updated the LWA1 and LWA2 SSMIFs
   * Fixed the observatory/instrument specific header values in lsl.writer.fitsidi so that they relflect the different sites
+  * Updated lsl.misc.dedispersion.coherent() to deal with the padding better
 
 0.5.4
   * Switched over to transparent compression in the lsl.common.metabundle functions
